--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <div id="menu" class="fas fa-bars"></div>
 
     <nav class="navbar">
-        <a href="https://tech-code24.net/">home</a>
-        <a href="https://tech-code24.net/">product</a>
-        <a href="https://tech-code24.net/">about</a>
-        <a href="https://tech-code24.net/">service</a>
-        <a href="https://tech-code24.net/">contact us</a>
+        <a href="#home">home</a>
+        <a href="#product">product</a>
+        <a href="#about">about</a>
+        <a href="#service">service</a>
+        <a href="#contact us">contact us</a>
     </nav>
 
 </header>
